Git this to work.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>Flex-Box</title>
 </head>
 <body>
+<div>&nbsp;</div>
+
     <div class="container">
 
   <div class="square">
     <label for="username">Username</label>
-    <input type="text">
+    <input type="text" placeholder="Who are you?">
+    <br>
     <label for="password">Password</label>
-    <input type="text">
+    <input type="text" placeholder="What is the secret word?">
+    <br>
+
     <select name="fav" id="">
         <option value="1">blue</option>
         <option value="2">green</option>
@@ -25,11 +30,9 @@
   </div>
 
 
-</div>
+    </div>
 
-  <p></p>
- 
-
-</div>
+  
 </body>
+
 </html>
