--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Flex-Box</title>
 </head>
 <body>
-<div>&nbsp;</div>
 
-    <div class="container">
-
+<div class="container">
+<div>&nbsp;
   <div class="square">
     <label for="username">Username</label>
     <input type="text" placeholder="Who are you?">
@@ -28,10 +27,9 @@
 
     <button type="button">Login</button>
   </div>
-
-
     </div>
 
+</div>
   
 </body>
 
